syntax = "proto3";
package bikes;

option java_package = "bikes.infrastructure.protobuf";
option go_package = "infrastructure";

message BikesMessage {
  repeated BikeMessage bikes = 1;
}

message BikeMessage {
  string manufacturer = 1;
  string name = 2;
  float weight = 3;
  float value = 4;
  repeated PartType parts = 5;
  ApprovalEnumType approval = 6;
}

message CreateBikeMessage {
  string manufacturer = 1;
  string name = 2;
  float weight = 3;
  float value = 4;
  repeated PartType parts = 5;
}

message PartType {
  string name = 1;
  float weight = 2;
}

enum ApprovalEnumType {
  // use as default for better compatibility
  // furthermore the default value is not serialized which is a problem when converting to json where it should be visible to other clients
  UNKNOWN = 0;
  PENDING = 1;
  ACCEPTED = 2;
  REJECTED = 3;
}

message ApprovalMessage {
  int64 bike_id = 1;
  ApprovalEnumType approval = 2;
}

message BikeDeletedMessage {
  int64 bike_id = 1;
}